--- a/src/app/dashboard/components/exercises/exercises-list/exercises-list.component.html
+++ b/src/app/dashboard/components/exercises/exercises-list/exercises-list.component.html
@@ -47,7 +47,7 @@
             (click)="goToQuestionList(element.id)">
             <mat-icon style="color: black;">build</mat-icon>
           </button>
-          <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
+          <button mat-stroked-button color="secondary" (click)="deleteExercise(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
