--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,10 @@ body {
     padding: 0;
 }
 
+.mat-radio-label {
+    white-space: pre-wrap !important;
+}
+
 .mat-dialog-container {
     padding: 0 !important;
 }
