--- a/src/app/dashboard/components/cursos/cursos.component.html
+++ b/src/app/dashboard/components/cursos/cursos.component.html
@@ -36,6 +36,12 @@
       <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
       <td mat-cell *matCellDef="let element" class="buttons">
         <button
+        mat-stroked-button
+        color="primary"
+        matTooltip="Agregar estudiante"
+        (click)="goToAddEstudent(element.id)"
+        > <mat-icon>person_add</mat-icon></button>
+        <button
           mat-stroked-button
           color="primary"
           matTooltip="Configurar descripción general"
