--- a/src/app/dashboard/components/course-registration/lessons/lessons.component.html
+++ b/src/app/dashboard/components/course-registration/lessons/lessons.component.html
@@ -3,9 +3,9 @@
     <h2>Lecciones</h2>
     <mat-form-field appearance="legacy" class="search">
         <mat-label>Buscar</mat-label>
-        <input matInput (input)="applyFilter($event.target.value)" placeholder="Buscar anuncio"> <!---->
+        <input matInput (input)="applyFilter($event.target.value)" placeholder="Buscar lección"> <!---->
         <mat-icon matSuffix>search</mat-icon>
-        <mat-hint>puede buscar por cualquier campo</mat-hint>
+        <mat-hint>Puede buscar por cualquier campo</mat-hint>
     </mat-form-field>
 
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
