--- a/src/app/dashboard/components/cursos/add-student/add-student.component.html
+++ b/src/app/dashboard/components/cursos/add-student/add-student.component.html
@@ -8,7 +8,7 @@
                     <mat-label>Buscar</mat-label>
                     <input
                     (input)="applyFilter($event.target.value)"
-                    matInput placeholder="Buscar Alumno"> <!---->
+                    matInput placeholder="Buscar Usuario"> <!---->
                     <mat-icon matSuffix>search</mat-icon>
                     <mat-hint>Puede buscar en todos los campos</mat-hint>
                 </mat-form-field>
@@ -24,7 +24,7 @@
         </div>
 
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <!-- nombre del anuncio -->
+            <!-- nombre del usuario -->
             <ng-container matColumnDef="nombre">
                 <th
                 mat-header-cell
@@ -36,7 +36,7 @@
                 <td
                     mat-cell
                     *matCellDef="let element"
-                    matTooltip="Anuncio"
+                    matTooltip="Usuario"
                     class="name">
                     {{ element.nombre }}
                 </td>
