--- a/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
+++ b/src/app/dashboard/components/cursos/add-student/matricular/matricular.component.html
@@ -6,14 +6,14 @@
             <mat-label>Buscar</mat-label>
             <input
             (input)="applyFilter($event.target.value)"
-            matInput placeholder="Buscar Alumno"> <!---->
+            matInput placeholder="Buscar Usuario"> <!---->
             <mat-icon matSuffix>search</mat-icon>
             <mat-hint>Puede buscar en todos los campos</mat-hint>
         </mat-form-field>
     </div>
 
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <!-- nombre del anuncio -->
+        <!-- nombre del usuario -->
         <ng-container matColumnDef="nombre">
             <th
             mat-header-cell
