--- a/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
+++ b/src/app/dashboard/components/exercises/questions/question-create/question-create.component.html
@@ -1,5 +1,6 @@
 <main>
-    <section>
+    <section class="option-select">
+        <h3>Seleccione el tipo de pregunta</h3>
         <mat-radio-group
             aria-label="seleccione una opción"
             color="primary"
@@ -282,7 +283,91 @@
                         <button mat-raised-button (click)="goBack()"><<< Cancelar</button>
                     </div>
                 </div>
-
+                <!-- tarea -->
+                <div *ngIf="item.value === 6">
+                    <!-- Editor de texto para la pregunta -->
+                    <div class="question-editor">
+                        <h3>{{edit ? 'Editar' : 'Añadir'}} Pregunta: {{ item.name }}</h3>
+                        <div class="mat-form-field-wrapper">
+                            <editor
+                            apiKey="fa82nlmdggdzt2rwcpx7k706ohjcnf9wo3ioar2p06d10yyk"
+                            class="mat-elevation-z1"
+                            [(ngModel)]="question"
+                            (onInit)="handleEditorInit($event)"
+                            [init]="{
+                                icons: 'material',
+                                skin: 'borderless',
+                                plugins: ['wordcount', 'lists', 'image imagetools', 'media'],
+                                menubar: false,
+                                min_height: 350,
+                                width : '750',
+                                toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media',
+                                media_live_embeds: true
+                            }"
+                            ></editor>
+                        </div>
+                    </div>
+                    <div class="job-options">
+                        <h3>Configuración de tarea</h3>
+                        <div class="job-options-list">
+                            <p></p>
+                            <div class="single-option">
+                                <mat-checkbox
+                                    class="final-date"
+                                    color="primary"
+                                    [(ngModel)]="jobExpDateCheck">
+                                    Activar fecha de vencimiento
+                                </mat-checkbox>
+                            </div>
+                            <p *ngIf="jobExpDateCheck">Fecha límite envío de tarea</p>
+                            <div *ngIf="jobExpDateCheck" class="single-option">
+                                <mat-form-field class="example-full-width" appearance="fill">
+                                    <mat-label>Fecha</mat-label>
+                                    <input matInput type="date" [(ngModel)]="jobExpDate">
+                                </mat-form-field>
+                                <mat-form-field class="example-full-width" appearance="fill">
+                                    <mat-label>Hora</mat-label>
+                                    <input matInput type="time" [(ngModel)]="jobExpTime">
+                                </mat-form-field>
+                            </div>
+                            <p></p>
+                            <div class="single-option">
+                                <mat-checkbox
+                                    class="final-date"
+                                    color="primary"
+                                    [(ngModel)]="jobFinalDateCheck">
+                                    Activar fecha de finalización
+                                </mat-checkbox>
+                            </div>
+                            <p *ngIf="jobFinalDateCheck">Acaba en (cerrado completamente)</p>
+                            <div *ngIf="jobFinalDateCheck" class="single-option">
+                                <mat-form-field class="example-full-width" appearance="fill">
+                                    <mat-label>Fecha</mat-label>
+                                    <input matInput type="date" [(ngModel)]="jobFinalDate">
+                                </mat-form-field>
+                                <mat-form-field class="example-full-width" appearance="fill">
+                                    <mat-label>Hora</mat-label>
+                                    <input matInput type="time" [(ngModel)]="jobFinalTime">
+                                </mat-form-field>
+                            </div>
+                            <p>Tipo de documento</p>
+                            <div class="single-option">
+                                <mat-form-field appearance="fill">
+                                    <mat-label>Seleccione una opción</mat-label>
+                                    <select matNativeControl required [(ngModel)]="documentType">
+                                        <option value="1">Permitir archivos y respuestas online</option>
+                                        <option value="2">Solo respuesta online</option>
+                                        <option value="3">Solo archivos</option>
+                                    </select>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="buttons">
+                        <button mat-raised-button color="primary" [disabled]="!question" (click)="saveJob()">Guardar tarea</button>
+                        <button mat-raised-button (click)="goBack()"><<< Cancelar</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
