--- a/src/app/dashboard/components/exercises/questions/question-create/question-create.component.scss
+++ b/src/app/dashboard/components/exercises/questions/question-create/question-create.component.scss
@@ -11,16 +11,24 @@ main {
     width: 90%;
 }
 
+.option-select h3 {
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: var(--main-color2);
+}
+
 .exercise-options {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     grid-template-rows: auto;
     gap: 16px;
+    justify-content: center;
+    width: 90%;
 }
 
 .exercise-options .option {
     display: grid;
-    grid-template-columns: 80px 250px 60px;
+    grid-template-columns: 70px 200px 60px;
     gap: 16px;
     background-color: white;
     -webkit-box-shadow: 1px 1px 4px 1px rgba(0,0,0,0.5); 
@@ -30,13 +38,13 @@ main {
 }
 
 .exercise-options .option img {
-    max-width: 90%;
+    max-width: 60%;
     padding: 5px;
 }
 
 .exercise-options .option .execise-name p {
     color: var(--main-color2);
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
     padding: 0;
     margin: 0;
@@ -181,4 +189,23 @@ main {
 .blancos p span {
     color: darkblue;
     font-weight: 600;
+}
+
+.job-options-list {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    grid-template-rows: auto;
+    gap: 24px;
+}
+
+.job-options-list p {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.job-options-list .single-option {
+    margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+    width: 60%;
 }
